Bug 376726 - View's itemChanged method isn't called when the title/uri of a bookmark item is changed. r=dietrich.